--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "name": "nombre-de-mi-package",
   "scripts": {
     "watch:css": "nodemon -e scss -x \"npm run build:css\"",
-    "build:css": "node-sass  --output-path compressed assets/scss/estilos.scss assets/css/main.css"
+    "build:css": "node-sass  --output-path compressed assets/scss/styles.scss assets/css/main.css"
   },
   "version": "1.0.0",
   "devDependencies": {
